# opensplice

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  Readme.md  _config.yml  azure-pipelines.yml  configure  index.html  makefile
MPC/config/: MPC.cfg  _example_dcps_impl_lib.mpb  _example_dcps_type_lib.mpb  _example_dlrl_type_lib.mpb  _example_streams_type_lib.mpb  _repetitive_c99_example_types.mpb  _repetitive_c_example_base.mpb  _repetitive_c_example_pub.mpb  _repetitive_c_example_sub.mpb  _repetitive_ccpp_example_pub.mpb  _repetitive_ccpp_example_sub.mpb  _repetitive_ccpp_example_types.mpb  _repetitive_cpp_example_base.mpb  _repetitive_cpp_example_pub.mpb  _repetitive_cpp_example_sub.mpb  _repetitive_face_cpp_example_types.mpb  _repetitive_isocpp2_example_impl.mpb  _repetitive_isocpp2_example_ping.mpb  _repetitive_isocpp2_example_pong.mpb  _repetitive_isocpp2_example_pub.mpb  _repetitive_isocpp2_example_sub.mpb  (+118 more)
MPC_ROOT/: ChangeLog  clone_build_tree.pl  mpc.pl  mwc.pl  prj_install.pl  vs_postclean.pl
_includes/: about.html  analytics.html  contact.html  disqus.html  docs.html  facebook.html  footer.html  head.html  header.html  license.html  promo.html
_layouts/: default.html
docs/: intro.html  makefile
etc/: DDS_DefaultQoS.xml  DDS_QoSProfile.xsd  docs_git_tag  doxygen_c99_api.cfg  doxygen_c99_api_common.cfg  doxygen_cs_api.cfg  doxygen_isocpp2_common.cfg  doxygen_isocpp2_distrib.cfg  doxygen_isocpp2_face_api.cfg  doxygen_isocpp2_face_common.cfg  doxygen_isocpp2_internal.cfg  doxygen_isocpp_common.cfg  doxygen_isocpp_distrib.cfg  doxygen_isocpp_internal.cfg  doxygen_java5_api.cfg  doxygen_java5_common.cfg  doxygen_java_face_api.cfg  doxygen_java_face_common.cfg  ospl.xml  ospl_ddsi.xml  ospl_ddsi2.xml  ospl_ddsi2_interoperable.xml  ospl_ddsi2_with_native.xml  ospl_no_network.xml  ospl_sp_ddsi.xml  ospl_sp_ddsi_10gbps.xml  ospl_sp_ddsi_1gbps.xml  ospl_sp_ddsi_only.xml  ospl_sp_ddsi_statistics.xml  ospl_sp_no_network.xml  valgrind-suppressions.txt
examples/: .gitignore  CSharp.mwc  JustJavaScripts.mwc  LaunchVS.bat  MakeAllExamples.sh  MakeOneExample.sh  NewExamples.sln  README.md  examples.mwc  examples.sln  examples_simple.mwc  makefile  pom.xml
examples/tmp/demo/ishapes/: CMakeLists.txt  ChangeLog  cmake_install.cmake
examples/tmp/demo/ishapes/cmake/: CMakeLists.txt  FindOpenSplice.cmake  FindSimD.cmake  MacroOpenSplice.cmake  osmacros.cmake
examples/utilities/logging/log4c-1.2.1/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  configure  configure.in  log4c-config.in  log4c.m4  log4c.spec  log4c.spec.in  log4crc.sample.in
examples/utilities/logging/log4c-1.2.1/config/: Makefile.in  expat.m4
examples/utilities/logging/log4c-1.2.1/doc/: Doxyfile.in  Makefile.am  Makefile.in  main.doc.in
examples/utilities/logging/log4c-1.2.1/examples/: Makefile.am  Makefile.in  README  application_1.c  application_2.c  application_3.c  application_3.h  example_appenders.c  example_formatters.c  log4crc  log4crc.in  userloc_formatter.c
examples/utilities/logging/log4c-1.2.1/examples/helloworld/: Makefile.am  Makefile.in  README  helloworld.c
examples/utilities/logging/log4c-1.2.1/examples/helloworld1/: Makefile.am  Makefile.in  helloworld1.c  mylog.h
examples/utilities/logging/log4c-1.2.1/src/: Makefile.am  Makefile.in  config.h  config.h.in  log4c.h
examples/utilities/logging/log4c-1.2.1/src/log4c/: Makefile.am  Makefile.in  appender.c  appender.h  appender_type_mmap.c  appender_type_mmap.h  appender_type_rollingfile.c  appender_type_rollingfile.h  appender_type_stream.c  appender_type_stream.h  appender_type_stream2.c  appender_type_stream2.h  appender_type_syslog.c  appender_type_syslog.h  buffer.h  category.c  category.h  config-win32.h  defs.h  init.c  init.h  layout.c  layout.h  layout_type_basic.c  layout_type_basic.h  layout_type_basic_r.c  layout_type_basic_r.h  layout_type_dated.c  layout_type_dated.h  layout_type_dated_r.c  layout_type_dated_r.h  location_info.h  logging_event.c  logging_event.h  priority.c  priority.h  rc.c  rc.h  rollingpolicy.c  rollingpolicy.h  (+5 more)
examples/utilities/logging/log4c-1.2.1/src/sd/: Makefile.am  Makefile.in  defs.h  domnode-expat.c  domnode-xml-parser.c  domnode-xml-parser.h  domnode-xml-parser.y  domnode-xml-parser.y.bak  domnode-xml-scanner.c  domnode-xml-scanner.h  domnode-xml-scanner.l  domnode-xml-scanner.l.bak  domnode-xml.c  domnode-xml.h  domnode.c  domnode.h  error.c  error.h  factory.c  factory.h  hash.c  hash.h  list.c  list.h  malloc.c  malloc.h  sd_xplatform.c  sd_xplatform.h  sprintf.c  sprintf.h  sprintf.osf.c  stack.c  stack.h  test.c  test.h
examples/utilities/logging/log4c-1.2.1/tests/: Makefile.am  Makefile.in
examples/utilities/logging/log4c-1.2.1/tests/log4c/: Makefile.am  Makefile.in  bench.c  bench_fwrite.c  cpp_compile_test.cpp  test_category.c  test_category.ref  test_layout_r.c  test_rc.c  test_rc.in  test_rc.ref  test_rollingfile_appender.c  test_rollingfile_appender_mt.c  test_stream2.c
extract/: makefile
install/: INSTALL.txt  auto-ospl-home  make_all  make_builder  make_demos_mirror  make_functions  make_hde  make_hde_mirror  make_mt  make_rts  make_rts_mirror  make_ste_mirror  makefile  opensplice.xml  package.ins
release_info/: BUILD  RELEASE  RELEASE_tmpl
scripts/: build_dds.sh  install_dep.sh
setup/: README  arm.linux_cross-common.mak  arm.linux_native-common.mak  arm9.linux-default.mak  armv6l.linux-default.mak  armv7l.linux-default.mak  armv8.linux-default.mak  armv8a.linux-default.mak  makefile  sparc.solaris10_gcc-default.mak  sparc.solaris10_studio12-default.mak  sparc.solaris10_studio12_64-default.mak  sparc.solaris9_gcc-default.mak  vcpp.mak  x86.darwin10-default.mak  x86.linux-default.mak  x86.win32-default.mak  x86_64.darwin10-default.mak  x86_64.darwin10_clang-default.mak  x86_64.linux-default.mak  x86_64.linux2.6-default.mak  x86_64.linux_clang-default.mak  x86_64.linux_opencc-default.mak  x86_64.solaris11_studio12-default.mak  x86_64.win64-default.mak
src/: .gitignore  makefile
testsuite/: makefile  testsuite.sln
(+10682 files in other folders)
